# src/delivery/handler/http/account/signin.go
@@ -7,23 +7,22 @@ import (
 	"net/http"
 )
 
-// register godoc
+// login godoc
 // @Schemes
-// @Summary Register new User
-// @Description Generate new User Account.
+// @Summary Logged User In
+// @Description Generate Access Token (JWT).
 // @Tags AccountHandler
 // @Accept mpfd
 // @Produce json
-// @Param name formData string true "full name"
 // @Param email formData string true "email address"
 // @Param password formData string true "password"
 // @Success 201 {object} utils.SuccessRespond "CREATED_RESPOND"
 // @Failure 400 {object} utils.ErrorRespond "BAD_REQUEST_RESPOND"
 // @Failure 422 {object} utils.ValidationErrorRespond "UNPROCESSABLE_ENTITY_RESPOND"
 // @Failure 500 {object} utils.ErrorRespond "INTERNAL_SERVER_ERROR_RESPOND"
-// @Router /v1/register [POST]
-func (handler *accountHandler) register(context *gin.Context) {
-	var form domain.UserRegisterForm
+// @Router /v1/login [POST]
+func (handler *accountHandler) signIn(context *gin.Context) {
+	var form domain.UserLoginForm
 
 	if err := context.ShouldBind(&form); err != nil {
 		validationError := utils.NewFormRequest(domain.UserFormErrorMessages).Validate(form, err)
@@ -31,11 +30,11 @@ func (handler *accountHandler) register(context *gin.Context) {
 		return
 	}
 
-	newUser := domain.User{Name: form.Name, Email: form.Email, Password: form.Password}
-	if err := handler.service.Register(&newUser); err != nil {
+	payload, err := handler.service.Login(form.Email, form.Password)
+	if err != nil {
 		utils.NewHttpRespond(context, http.StatusBadRequest, err.Error())
 		return
 	}
 
-	utils.NewHttpRespond(context, http.StatusCreated, "ACCOUNT_CREATED")
+	utils.NewHttpRespond(context, http.StatusCreated, payload)
 }
